erDiagram
  users ||--o{ courses : teaches
  courses ||--o{ course_lessons : organizes
  lessons ||--o{ course_lessons : reused_in
  users ||--o{ enrollments : joins
  courses ||--o{ enrollments : has
  enrollments ||--o{ lesson_progress : tracks
  lessons ||--o{ lesson_progress : measured_by

  users {
    bigint id PK
    text email
    text role
  }

  courses {
    bigint id PK
    bigint instructor_id FK
    text slug
    text title
  }

  lessons {
    bigint id PK
    text slug
    int duration_minutes
  }

  course_lessons {
    bigint course_id PK,FK
    bigint lesson_id PK,FK
    int position
  }

  enrollments {
    bigint id PK
    bigint course_id FK
    bigint student_id FK
    text status
  }

  lesson_progress {
    bigint enrollment_id PK,FK
    bigint lesson_id PK,FK
    int progress_percent
  }
